--- a/sfgame/src/main/resources/templates/index.html
+++ b/sfgame/src/main/resources/templates/index.html
@@ -15,6 +15,8 @@
         <a href="/dungeons" class="button" th:text="#{dungeons}">Dungeons</a>
         <a href="/magic-shop" class="button" th:text="#{magicShop}">Magic Shop</a>
         <a href="/weapon-shop" class="button" th:text="#{weaponShop}">Weapon Shop</a>
+        <a href="/legacy-leaderboard" class="button" th:text="#{legacyLeaderboard}">Legacy Leaderboard</a>
+        <a href="/guilds" class="button" th:text="#{guilds}">Guilds</a>
     </div>
 </body>
 </html>
