--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="button-container">
         <a href="/tavern" class="button" th:text="#{tavern}">Tavern</a>
-        <a href="/player-inventory" class="button" th:text="#{playerInventory}">Player Inventory</a>
+        <a href="/player" class="button" th:text="#{playerInventory}">Player Inventory</a>
         <a href="/dungeons" class="button" th:text="#{dungeons}">Dungeons</a>
         <a href="/magic-shop" class="button" th:text="#{magicShop}">Magic Shop</a>
         <a href="/weapon-shop" class="button" th:text="#{weaponShop}">Weapon Shop</a>
