--- a/src/main/resources/templates/player/player-details.html
+++ b/src/main/resources/templates/player/player-details.html
@@ -86,6 +86,7 @@
                         <div th:if="${item?.dexterity != null}" th:text="'Dex: ' + ${item.dexterity}"></div>
                         <div th:if="${item?.intelligence != null}" th:text="'Int: ' + ${item.intelligence}"></div>
                         <div th:if="${item?.constitution != null}" th:text="'Con: ' + ${item.constitution}"></div>
+                        <div th:if="${item?.getWeapon != null}" th:text="'Dmg Dev: ' + ${item.getWeapon.getMinDamage} + ' - ' + ${item.getWeapon.getMaxDamage}"></div>
                     </div>
                 </div>
             </div>
